# vkRendering

./: .gitignore  CMakeLists.txt  LICENSE
resources/shaders/: compile.bat  default.frag  default.vert
src/: Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h  main.cpp
src/misc/: FileHelper.h  Logger.cpp  Logger.h  Target.h
